feature(label): TODO 작성

--- a/src/main/resources/templates/shippingLabel/cj_basic.html
+++ b/src/main/resources/templates/shippingLabel/cj_basic.html
@@ -1,1 +1,8 @@
 <!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="layout/default">
+<th:block layout:fragment="content">
+  <!-- TODO: sampleResult 를 참고하여 Model로 전달받은 데이터를 바탕으로 동일한 화면 출력 -->
+</th:block>
+</html>
