--- a/src/main/resources/templates/shippingLabel/codeSample.html
+++ b/src/main/resources/templates/shippingLabel/codeSample.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 
 <html
-    lang="ko"
->
+        lang="ko"
+        xmlns:th="http://www.w3.org/1999/xhtml">
 <div class="wb-container">
   <div class="cj-b-wrap">
 
